--- a/package.json
+++ b/package.json
@@ -3,17 +3,15 @@
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
-  "directories": {
-    "lib": "lib"
-  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "node server.js"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/dlock98/employee-tracker.git"
   },
+  "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
@@ -22,7 +20,11 @@
   "homepage": "https://github.com/dlock98/employee-tracker#readme",
   "dependencies": {
     "console.table": "^0.10.0",
+    "express": "^4.18.1",
     "inquirer": "^8.2.4",
     "mysql2": "^2.3.3"
+  },
+  "devDependencies": {
+    "jest": "^29.0.0"
   }
 }
